CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(myslam)

SET(CMAKE_BUILD_TYPE "DEBUG")
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -O3")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )

list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )

############### dependencies ######################
# Eigen
FIND_PACKAGE(Eigen3 REQUIRED )
INCLUDE_DIRECTORIES( ${Eigen3_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( "/usr/include/eigen3" )
# OpenCV 3.1
FIND_PACKAGE(OpenCV 3.0 REQUIRED)
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
# Sophus 
FIND_PACKAGE( Sophus REQUIRED )
INCLUDE_DIRECTORIES( ${Sophus_INCLUDE_DIRS} )
# G2O
FIND_PACKAGE(G2O REQUIRED)
INCLUDE_DIRECTORIES( ${G2O_INCLUDE_DIRS} )
# Ceres
FIND_PACKAGE(Ceres REQUIRED )
INCLUDE_DIRECTORIES( ${Ceres_INCLUDE_DIRS} )

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
SET( THIRD_PARTY_LIBS 
    ${OpenCV_LIBRARIES}
    ${Sophus_LIBRARIES}
	${G2O_LIBRARIES}
	${Eigen3_LIBRARIES}
	${Ceres_LIBRARIES}
)
#MESSAGE("******************************************")
#message(${CMAKE_CXX_FLAGS})
#MESSAGE("******************************************")
#message(${OpenCV_LIBRARIES})
#MESSAGE("******************************************")

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/examples)
